--- a/templates/dashboard/level.html
+++ b/templates/dashboard/level.html
@@ -1,6 +1,7 @@
 {% extends 'base/dashboard_base.html' %}{% load static karma %}
 {% block css %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/pages/buy-ico.min.css' %}">
 {% endblock css %}
 {% block breadcrumb %}
 {% include 'partials/breadcrumb.html' with current_page_name="Level" %}
@@ -47,7 +48,7 @@
             <div class="row">
               <div class="col-md-3 col-xl-2 col-12 d-none d-md-block">
                 <div class="crypto-circle rounded-circle">
-                  <i class="cc BTC-alt"></i>
+                  <i class="icon-layers"></i>
                 </div>
               </div>
               <div class="col-md-5 col-xl-7 col-12">
