--- a/templates/partials/dashboard_navbar.html
+++ b/templates/partials/dashboard_navbar.html
@@ -10,13 +10,16 @@
             <li class=" nav-item {% if page == 'level' %}active{% endif %}"><a href="{% url 'level' %}">
                     <i class="icon-layers"></i><span class="menu-title">Levels</span></a>
             </li>
-            <li class=" nav-item"><a href="{% url 'referral' %}">
-                    <i class="icon-wallet"></i><span class="menu-title">Referrals</span></a>
-            </li>
-            <li class=" nav-item"><a href="{% url 'peer' %}">
+            <li class=" nav-item {% if page == 'peer' %}active{% endif %}"><a href="{% url 'peer' %}">
                     <i class="icon-shuffle"></i><span class="menu-title">Peers</span></a>
             </li>
-            <li class=" nav-item"><a href="faq.html">
+            <li class=" nav-item {% if page == 'referral' %}active{% endif %}"><a href="{% url 'referral' %}">
+                    <i class="icon-wallet"></i><span class="menu-title">Referrals</span></a>
+            </li>
+            <li class=" nav-item {% if page == 'transaction' %}active{% endif %}"><a href="{% url 'transactions' %}">
+                    <i class="icon-chart"></i><span class="menu-title">Transactions</span></a>
+            </li>
+            <li class=" nav-item {% if page == 'faq' %}active{% endif %}"><a href="faq.html">
                     <i class="icon-support"></i><span class="menu-title">FAQ</span></a>
             </li>
             <li class=" nav-item {% if page == 'profile' %}active{% endif %}"><a
