--- a/templates/dashboard/peer.html
+++ b/templates/dashboard/peer.html
@@ -74,20 +74,20 @@
                   </div>
                   {% if user.task == 'R' %}
                   <div class="col-md-2 col-12 py-1 text-center">
-                    <button onclick="processForm(event, 'confirm', {{peer.id}});"
+                    <button onclick="confirm(event, 'confirm', {{peer.id}});"
                       class="btn btn-success line-height-3">Confirm</button>
                   </div>
                   <div class="col-md-2 col-12 py-1 text-center">
-                    <button onclick="processForm(event, 'purge', {{peer.id}});"
+                    <button onclick="confirm(event, 'purge', {{peer.id}});"
                       class="btn btn-danger line-height-3">Purge</button>
                   </div>
                   {% else %}
                   <div class="col-md-2 col-12 py-1 text-center">
-                    <button onclick="processForm(event, 'paid', {{peer.id}});"
+                    <button onclick="confirm(event, 'paid', {{peer.id}});"
                       class="btn btn-success line-height-3">Paid</button>
                   </div>
                   <div class="col-md-2 col-12 py-1 text-center">
-                    <button onclick="processForm(event, 'purge_self', {{peer.id}});"
+                    <button onclick="confirm(event, 'purge_self', {{peer.id}});"
                       class="btn btn-danger line-height-3">Purge</button>
                   </div>
                   {% endif %}
@@ -156,10 +156,34 @@
 
 {% block javascript %}
 <script type="text/javascript">
-  function processForm(e, action, user_id) {
-    form = document.getElementById('peer_form')
+
+  function confirm(e, action, user_id) {
     e = e || window.event;
     e.preventDefault();
+    swal({
+      title: "Are you sure you what to do this?",
+      text: "you will not be able to make changes after this.",
+      dangerMode: true,
+      buttons: {
+        cancel: true,
+        continue: {
+          dangerMode: true,
+          text: "Yes",
+          value: action,
+          className: "btn-danger"
+        },
+      },
+      icon: "warning",
+    })
+      .then((value) => {
+        if (value) {
+          processForm(action, user_id);
+        }
+      });
+  }
+
+  function processForm(action, user_id) {
+    form = document.getElementById('peer_form')
     if (action == 'confirm') {
       updateForm(form, 'action', 'confirm')
     } else if (action == 'purge') {
@@ -172,6 +196,7 @@
       return false;
     }
     updateForm(form, 'target', user_id)
+    console.log(form)
     form.submit()
   }
 
