--- a/templates/dashboard/level.html
+++ b/templates/dashboard/level.html
@@ -15,17 +15,17 @@
           <div class="col-12">
             <form action="{% url 'level' %}" method="POST">
               <div class="row">
-                <div class="col-md-3 col-xl-2 col-12 d-none d-md-block">
+                <div class="col-md-3 col-xl-2 col-3 d-none d-md-block">
                   <div class="crypto-circle rounded-circle">
                     <i class="icon-layers"></i>
                   </div>
                 </div>
-                <div class="col-md-5 col-xl-6 col-12">
+                <div class="col-md-5 col-xl-6 col-6">
                   <p><strong>Earnings:</strong></p>
                   <h1>N{{user.amount_received}}</h1>
                   <p class="mb-0">Welcome bonus <strong>+30%</strong> expires in 21 days.</p>
                 </div>
-                <div class="col-md-4 col-xl-4 col-12 d-none d-md-block text-right">
+                <div class="col-md-4 col-xl-4 col-3 text-right">
                   <button type="submit" class="btn-gradient-secondary mt-2">{% if user.level %}Uneroll{% else %}Enroll{% endif %} <i class="la la-angle-right"></i></button>
                 </div>
               </div>
