--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,25 +1,36 @@
 {% extends 'base/auth_base.html' %}
 {% block auth_form %}
-<div class="col-xl-3 col-lg-4 col-md-5 col-sm-5 col-12 p-0">
-    <div class="card border-grey border-lighten-3 m-0 box-shadow-0 card-account-right height-350">                
-        <div class="card-content">                    
-            <div class="card-body p-3">
-                <p class="text-center h5 text-capitalize">Request Your Password</p>
-                <p class="mb-3 text-center">Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
-                <form method='POST' action="{% url 'account_reset_password' %}" class="form-horizontal form-signin">                            
-                    <fieldset class="form-label-group">
-                        {{form.email}}
-                        <label for="id_email">E-mail address</label>
-                    </fieldset>
-                    {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                    {% endif %}
-                    {% csrf_token %}
-                    <button type="submit" class="btn-gradient-primary btn-block my-1">Reset</button>
-                    <p class="text-center"><a href="{{ login_url }}" class="card-link">Log in</a></p>
-                </form>
-            </div>                    
+<form method='POST' action="{% url 'account_reset_password' %}" class="reset-password-form">
+    {% block form_text %}
+    <h4 class="mb-5">Reset Your password</h4>
+    <p class="mb-10">
+        Please enter your email address and we will send you a password password link.
+    </p>
+    {% endblock form_text %}
+    <div class="form-group">
+        <div class="input-group">
+            <div class="input-group-prepend">
+                <span class="input-group-text">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="16" viewBox="0 0 24 16">
+                        <g transform="translate(0)">
+                            <path
+                                d="M23.983,101.792a1.3,1.3,0,0,0-1.229-1.347h0l-21.525.032a1.169,1.169,0,0,0-.869.4,1.41,1.41,0,0,0-.359.954L.017,115.1a1.408,1.408,0,0,0,.361.953,1.169,1.169,0,0,0,.868.394h0l21.525-.032A1.3,1.3,0,0,0,24,115.062Zm-2.58,0L12,108.967,2.58,101.824Zm-5.427,8.525,5.577,4.745-19.124.029,5.611-4.774a.719.719,0,0,0,.109-.946.579.579,0,0,0-.862-.12L1.245,114.4,1.23,102.44l10.422,7.9a.57.57,0,0,0,.7,0l10.4-7.934.016,11.986-6.04-5.139a.579.579,0,0,0-.862.12A.719.719,0,0,0,15.977,110.321Z"
+                                transform="translate(0 -100.445)" />
+                        </g>
+                    </svg>
+                </span>
+            </div>
+            {{form.email}}
         </div>
     </div>
-</div> 
+    <div class="row">
+        <div class="col-md-12">
+            <button class="btn btn-primary btn-block">Send Reset Link</button>
+        </div>
+    </div>
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    {% csrf_token %}
+</form>
 {% endblock auth_form %}
