--- a/templates/base/auth_base.html
+++ b/templates/base/auth_base.html
@@ -1,40 +1,76 @@
-<!DOCTYPE html>{% load static %}{% load account socialaccount %}
-<html class="loading" lang="en" data-textdirection="ltr">
+<!doctype html>{% load static account socialaccount %}
+<html lang="en">
+
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Account Login </title>
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,600,600i,700,700i|Comfortaa:300,400,500,700"el="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/vendors.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/icheck/icheck.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/forms/icheck/custom.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/app.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/core/menu/menu-types/vertical-compact-menu.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/cryptocoins/cryptocoins.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/pages/account-login.css' %}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Authentication forms">
+    <meta name="author" content="">
+
+    <title></title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/accounts/style-1.css' %}">
+
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/accounts/style-2.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
+        integrity="sha256-ENFZrbVzylNbgnXx0n3I1g//2WeO47XxoPe0vkp3NC8=" crossorigin="anonymous" />
 </head>
 
-<body class="vertical-layout vertical-compact-menu 1-column  bg-full-screen-image menu-expanded blank-page blank-page"
-    data-open="click" data-menu="vertical-compact-menu" data-col="1-column">
-    <div class="app-content content">
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <section id="account-login" class="flexbox-container">
-                    <div class="col-12 d-flex align-items-center justify-content-center">
-                        {% block auth_form %}
-                        {% endblock auth_form %}
-                    </div>
-                </section>
+<body>
+    <div class="forny-container">
 
+        <div class="forny-inner">
+            <div class="forny-form">
+                <div class="mb-8 text-center forny-logo">
+                    <img src="{% static 'images/backgrounds/accounts/logo-03.svg' %}">
+                </div>
+                {% block auth_text %}
+                {% endblock auth_text %}
+                {% block auth_form %}
+                {% endblock auth_form %}
             </div>
         </div>
+
     </div>
+
     <script src="{% static 'vendors/js/vendors.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'vendors/js/forms/icheck/icheck.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/core/app-menu.min.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/core/app.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/accounts/main.js' %}" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
+        integrity="sha256-3blsJd4Hli/7wCQ+bmgXfOdK7p/ZUMtPXY08jmxSSgk=" crossorigin="anonymous"></script>
+    <script>
+        toastr.options = {
+            "closeButton": false,
+            "debug": false,
+            "newestOnTop": false,
+            "progressBar": true,
+            "positionClass": "toast-top-center",
+            "preventDuplicates": true,
+            "onclick": null,
+            "showDuration": "300",
+            "hideDuration": "1000",
+            "timeOut": "5000",
+            "extendedTimeOut": "1000",
+            "showEasing": "swing",
+            "hideEasing": "linear",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        }
+        {% if form.errors %}
+        {% for field in form %}
+        {% for error in field.errors %}
+        toastr["error"]("{{error| escape}}", '{{field.name}}')
+        {% endfor %}
+        {% endfor %}
+
+        {% for error in form.non_field_errors %}
+        toastr["error"]("{{error| escape}}")
+        {% endfor %}
+        {% else %}
+        {% endif %}
+    </script>
 </body>
+
 </html>
